# Mampostera

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  DEPLOY_TESTNET.md  MAMP_TOKENOMICS.md  README.md  drizzle.config.ts  next.config.js  package.json  rust-toolchain.toml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json
.github/workflows/: ci.yml
docs/: LEGAL_TECH.md  PERIPHERAL_MODULES.md
mampostera/src/: appchain.rs  lib.rs  market.rs  oracle.rs
mampostera/src/upgrades/: liquidity.rs  mamp_token.rs  oracle_v2.rs  security.rs
programs/: Cargo.toml
programs/mampostera/: Cargo.toml
programs/mampostera/src/: errors.rs  governance.rs  kyc.rs
programs/mampostera/src/upgrades/: compressed.rs  proof_of_reserve.rs
scripts/: deploy.ts  deposit-rent.ts  init-property.ts
src/: middleware.ts
src/app/: layout.tsx  page.tsx  page.v04.tsx.bak  providers.tsx
src/app/api/actions/property/: route.ts
src/app/api/auth/privy/: route.ts
src/app/api/comms/email/: route.ts
src/app/api/comms/sms/: route.ts
src/app/api/events/property/: route.ts
src/app/api/events/recent/: route.ts
src/app/api/events/wallet/: route.ts
src/app/api/legal/ai/: route.ts
src/app/api/legal/por/: route.ts
src/app/api/legal/sign/: route.ts
src/app/api/payments/moonpay/: route.ts
src/app/api/payments/stripe/: route.ts
src/app/api/payments/virtual-account/: route.ts
src/app/api/payments/wompi/: route.ts
src/app/api/por/register/: route.ts
src/app/api/webhooks/helius/: route.ts
src/app/api/webhooks/hyperlane/: route.ts
src/app/api/webhooks/stripe/: route.ts
src/app/api/webhooks/wompi/: route.ts
src/components/admin/: AdminPanel.tsx
src/components/dashboard/: AnalyticsDashboard.tsx
src/components/governance/: GovernanceVoting.tsx
src/components/kyc/: CivicKYC.tsx
src/components/vault/: VaultDeposit.tsx
src/hooks/: useMampostera.ts
src/lib/: program.ts
src/lib/queue/: client.ts
src/lib/queue/jobs/: legal-ai.job.ts  rent-notify.job.ts  sign-doc.job.ts
src/services/: index.ts  secrets.service.ts
src/services/analytics/: posthog.adapter.ts
src/services/auth/: privy.adapter.ts
src/services/comms/: resend.adapter.ts  twilio.adapter.ts
src/services/indexer/: helius.service.ts
src/services/legal/: avm.service.ts  claude.adapter.ts  firma.adapter.ts  por.service.ts
src/services/payments/: moonpay.adapter.ts  stripe.adapter.ts  wompi.adapter.ts
src/services/security/: cloudflare.adapter.ts  sentry.adapter.ts
src/types/: index.ts  vault.ts
src/v2/app/: page.tsx  providers.tsx
src/v2/app/api/: route.ts
src/v2/components/admin/: AdminPanel.tsx
src/v2/components/dashboard/: ActivityFeed.tsx  AnalyticsDashboard.tsx
src/v2/components/payments/: OnrampButton.tsx  OnrampModal.tsx  VirtualAccountCard.tsx
src/v2/components/property/: BlinkButton.tsx  LiquidityPoolCard.tsx  ProofOfReserveBadge.tsx  PropertyCard.tsx
src/v2/components/token/: MampStakeCard.tsx
src/v2/components/ui/: index.tsx  utils.ts
src/v2/db/: client.ts  schema.ts
src/v2/hooks/: use-events.ts  use-mamp.ts  use-onramp.ts  use-proof-of-reserve.ts  use-properties.ts  use-virtual-account.ts
src/v2/jobs/: inngest.ts
src/v2/store/: app.store.ts
src/v2/trpc/: client.ts  router.ts
src/v2/wrappers/: queue-v1.ts  use-properties-v1.ts
tests/: appchain.test.ts  governance.test.ts  kyc.test.ts  mampostera.ts  market.test.ts
whitepaper/: LEGAL_TERMS.md  WHITEPAPER.md
