[workspace]
members  = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true   # panic en overflow aritmético — seguridad crítica
lto             = "fat"  # link-time optimization completa (del ZIP)
codegen-units   = 1      # mejor optimización del compilador (del ZIP)
opt-level       = 3

# Build scripts y proc-macros (del ZIP)
[profile.release.build-override]
opt-level     = 3
incremental   = false
codegen-units = 1
