[package]
name        = "mampostera"
version     = "0.4.0"
edition     = "2021"
description = "Mampostera PropTech AppChain — RWA + ZK + Cross-chain + dNFT"

# ── Versiones fijadas para reproducibilidad y seguridad de supply-chain ──────
[dependencies]
anchor-lang    = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl     = { version = "0.30.1", features = [
    "token",
    "token_2022",              # Token-2022: TransferFee, ConfidentialTransfer, Hook
    "associated_token",
    "metadata",
] }
solana-program = "1.18.16"

# ── Fase 0: Seguridad ────────────────────────────────────────────────────────
# Squads Protocol v4 — multisig nativo Solana (reemplaza Gnosis Safe)
# Descomentar cuando esté lista la integración:
# squads-multisig = { version = "0.3", features = ["cpi"] }

# ── Fase 2: Oracle externo ────────────────────────────────────────────────────
# Switchboard V2 — price feeds decentralizados
# Descomentar en Fase 2:
switchboard-solana = "0.30"   # R4: oracle externo Fase 2

# ── ZK / Light Protocol (descomentar en producción) ──────────────────────────
# light-protocol = { git = "https://github.com/Lightprotocol/light-protocol",
#                   rev = "v0.7.0", optional = true }

# ── Wormhole fallback bridge (descomentar si se usa Wormhole como fallback) ──
# wormhole-anchor-sdk = { version = "0.3.0", optional = true }

[lib]
crate-type = ["cdylib", "lib"]
name       = "mampostera"

[features]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]
default        = []
# zk           = ["light-protocol"]
# wormhole     = ["wormhole-anchor-sdk"]

[profile.release]
overflow-checks = true
lto             = "fat"
codegen-units   = 1
opt-level       = 3

[profile.release.build-override]
opt-level     = 3
incremental   = false
codegen-units = 1
